--- a/.github/workflows/buildtarget.yml
+++ b/.github/workflows/buildtarget.yml
@@ -37,6 +37,8 @@ jobs:
       - run: scripts/install.sh
       - run: cd pxt-lets-steam;pxt ci
         env:
+          PXT_FORCE_LOCAL: 1 
+          PXT_NODOCKER : 1
           CROWDIN_KEY: ${{ secrets.CROWDIN_KEY }}
           PXT_ACCESS_TOKEN: ${{ secrets.PXT_ACCESS_TOKEN }}
           PXT_RELEASE_REPO: ${{ secrets.PXT_RELEASE_REPO }}
