--- a/.github/workflows/buildpr.yml
+++ b/.github/workflows/buildpr.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           token: ${{ secrets.REPOSITORY_ACCESS_TOKEN }} 
           submodules: 'recursive' 
-      - run: scripts/install.sh
+      - run: scripts/setup.sh
       - run: cd pxt-lets-steam;pxt ci
         env:
           CHROME_BIN: chromium-browser
