--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "author": "letssteam",
     "license": "MIT",
     "scripts": {
-        "setup": "scripts/setup.sh",
+        "setup": "git submodule update --init --recursive && scripts/setup.sh",
         "serve": "scripts/serve.sh",
         "build": "scripts/build.sh",
         "clean": "scripts/clean.sh"
