--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "setup": "git submodule update --init --recursive && git pull && scripts/setup.sh",
         "serve": "scripts/serve.sh",
         "build": "scripts/build.sh",
+        "package": "scripts/package.sh",
         "clean": "scripts/clean.sh"
     },
     "repository": {
