Update VS Code settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,5 +75,7 @@
         "thread": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp"
-    }
+    },
+    "editor.formatOnSave": true,
+    "files.autoSave": "onFocusChange"
 }
