--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,11 +3,7 @@
 {
 	"name": "Node.js & TypeScript",
 	"build": {
-		"dockerfile": "Dockerfile",
-		// Update 'VARIANT' to pick a Node version: 10, 12, 14
-		"args": {
-			"VARIANT": "14"
-		}
+		"dockerfile": "Dockerfile"
 	},
 	// Set *default* container specific settings.json values on container create.
 	"settings": {
@@ -22,11 +18,10 @@
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	"forwardPorts": [
 		3232,
-		3233,
-		8080
+		3233
 	],
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "scripts/setup.sh",
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "node"
+	"remoteUser": "vscode"
 }
