--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,6 +5,15 @@
 	"build": {
 		"dockerfile": "Dockerfile"
 	},
+	"mounts": [
+		"type=bind,source=/dev/bus/usb,target=/dev/bus/usb"
+	],
+	"runArgs": [
+		"--cap-add=SYS_PTRACE",
+		"--security-opt",
+		"seccomp=unconfined",
+		"--privileged"
+	],
 	// Set *default* container specific settings.json values on container create.
 	"settings": {
 		"terminal.integrated.shell.linux": "/bin/zsh"
@@ -14,6 +23,11 @@
 		"dbaeumer.vscode-eslint",
 		"github.vscode-pull-request-github",
 		"esbenp.prettier-vscode",
+		"ms-python.python",
+		"ms-vscode.cpptools-extension-pack",
+		"marus25.cortex-debug",
+		"xaver.clang-format",
+		"ms-azuretools.vscode-azurestaticwebapps",
 	],
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	"forwardPorts": [
