--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,12 @@
 {
     "recommendations": [
-        "github.vscode-pull-request-github",
+        "ms-azuretools.vscode-azurestaticwebapps",
         "dbaeumer.vscode-eslint",
-        "esbenp.prettier-vscode"
+        "github.vscode-pull-request-github",
+        "esbenp.prettier-vscode",
+        "ms-python.python",
+        "ms-vscode.cpptools-extension-pack",
+        "marus25.cortex-debug",
+        "xaver.clang-format"
     ]
 }
