--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,41 +1,41 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.166.1/containers/typescript-node
 {
-	"name": "Node.js & TypeScript",
-	"build": {
-		"dockerfile": "Dockerfile"
-	},
-	"mounts": [
-		"type=bind,source=/dev/bus/usb,target=/dev/bus/usb"
-	],
-	"runArgs": [
-		"--cap-add=SYS_PTRACE",
-		"--security-opt",
-		"seccomp=unconfined",
-		"--privileged"
-	],
-	// Set *default* container specific settings.json values on container create.
-	"settings": {
-		"terminal.integrated.shell.linux": "/bin/zsh"
-	},
-	// Add the IDs of extensions you want installed when the container is created.
-	"extensions": [
-		"dbaeumer.vscode-eslint",
-		"github.vscode-pull-request-github",
-		"esbenp.prettier-vscode",
-		"ms-python.python",
-		"ms-vscode.cpptools-extension-pack",
-		"marus25.cortex-debug",
-		"xaver.clang-format",
-		"ms-azuretools.vscode-azurestaticwebapps",
-	],
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	"forwardPorts": [
-		3232,
-		3233
-	],
-	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "scripts/setup.sh",
-	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "vscode"
+  "name": "Node.js & TypeScript",
+  "build": {
+    "dockerfile": "Dockerfile"
+  },
+  "mounts": ["type=bind,source=/dev/bus/usb,target=/dev/bus/usb"],
+  "runArgs": [
+    "--cap-add=SYS_PTRACE",
+    "--security-opt",
+    "seccomp=unconfined",
+    "--privileged"
+  ],
+  "remoteEnv": {
+    "PXT_NODOCKER": "1",
+    "PXT_FORCE_LOCAL": "1",
+    "PXT_RUNTIME_DEV": "1"
+  },
+  // Set *default* container specific settings.json values on container create.
+  "settings": {
+    "terminal.integrated.shell.linux": "/bin/zsh"
+  },
+  // Add the IDs of extensions you want installed when the container is created.
+  "extensions": [
+    "dbaeumer.vscode-eslint",
+    "github.vscode-pull-request-github",
+    "esbenp.prettier-vscode",
+    "ms-python.python",
+    "ms-vscode.cpptools-extension-pack",
+    "marus25.cortex-debug",
+    "xaver.clang-format",
+    "ms-azuretools.vscode-azurestaticwebapps"
+  ],
+  // Use 'forwardPorts' to make a list of ports inside the container available locally.
+  "forwardPorts": [3232, 3233],
+  // Use 'postCreateCommand' to run commands after the container is created.
+  "postCreateCommand": "scripts/setup.sh",
+  // Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
+  "remoteUser": "vscode"
 }
