--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.166.1/containers/typescript-node
 {
-  "name": "Node.js & TypeScript",
+  "name": "Node.js & TypeScript & Cpp",
   "build": {
     "dockerfile": "Dockerfile"
   },
@@ -19,18 +19,22 @@
   },
   // Set *default* container specific settings.json values on container create.
   "settings": {
-    "terminal.integrated.shell.linux": "/bin/zsh"
+    "terminal.integrated.profiles.linux": {
+      "zsh (login)": {
+        "path": "zsh",
+        "args": ["-l"]
+      }
+    }
   },
   // Add the IDs of extensions you want installed when the container is created.
   "extensions": [
     "dbaeumer.vscode-eslint",
-    "github.vscode-pull-request-github",
     "esbenp.prettier-vscode",
+    "github.vscode-pull-request-github",
     "ms-python.python",
     "ms-vscode.cpptools-extension-pack",
     "marus25.cortex-debug",
-    "xaver.clang-format",
-    "ms-azuretools.vscode-azurestaticwebapps"
+    "xaver.clang-format"
   ],
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
   "forwardPorts": [3232, 3233],
