Activate zsh as default shell on devcontainer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -87,7 +87,5 @@
   },
   "editor.formatOnSave": true,
   "files.autoSave": "onFocusChange",
-  "staticWebApps.appSubpath": "/",
-  "staticWebApps.apiSubpath": "",
-  "staticWebApps.outputSubpath": "pxt-lets-steam/built/packaged/"
+  "cmake.configureOnOpen": false
 }
