--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,11 +20,11 @@
   // Set *default* container specific settings.json values on container create.
   "settings": {
     "terminal.integrated.profiles.linux": {
-      "zsh (login)": {
-        "path": "zsh",
-        "args": ["-l"]
+      "zsh": {
+        "path": "zsh"
       }
-    }
+    },
+    "terminal.integrated.defaultProfile.linux": "zsh"
   },
   // Add the IDs of extensions you want installed when the container is created.
   "extensions": [
