--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -87,5 +87,9 @@
   },
   "editor.formatOnSave": true,
   "files.autoSave": "onFocusChange",
-  "cmake.configureOnOpen": false
+  "cmake.configureOnOpen": false,
+  "terminal.integrated.defaultProfile.linux": "zsh",
+  "javascript.format.semicolons": "insert",
+  "typescript.format.semicolons": "insert",
+  "eslint.format.enable": true
 }
