--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,29 +17,62 @@
     "PXT_FORCE_LOCAL": "1",
     "PXT_RUNTIME_DEV": "1"
   },
-  // Set *default* container specific settings.json values on container create.
-  "settings": {
-    "terminal.integrated.profiles.linux": {
-      "zsh": {
-        "path": "zsh"
-      }
-    },
-    "terminal.integrated.defaultProfile.linux": "zsh"
+  "features": {
+    "ghcr.io/devcontainers/features/node:1": {},
+    "ghcr.io/devcontainers-contrib/features/typescript:2": {},
+
+    // Install common utilities
+    "ghcr.io/devcontainers/features/common-utils:2": {
+      "installZsh": true,
+      "installOhMyZsh": true,
+      "upgradePackages": true,
+      "username": "vscode"
+    }
   },
-  // Add the IDs of extensions you want installed when the container is created.
-  "extensions": [
-    "dbaeumer.vscode-eslint",
-    "esbenp.prettier-vscode",
-    "github.vscode-pull-request-github",
-    "ms-python.python",
-    "ms-vscode.cpptools-extension-pack",
-    "marus25.cortex-debug",
-    "xaver.clang-format"
-  ],
-  // Use 'forwardPorts' to make a list of ports inside the container available locally.
-  "forwardPorts": [3232, 3233],
-  // Use 'postCreateCommand' to run commands after the container is created.
-  "postCreateCommand": "scripts/setup.sh",
-  // Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-  "remoteUser": "vscode"
+
+  "customizations": {
+    // Configure properties specific to VS Code.
+    "vscode": {
+      // Set *default* container specific settings.json values on container create.
+      "settings": {
+        "terminal.integrated.profiles.linux": {
+          "zsh": {
+            "path": "zsh"
+          }
+        },
+        "terminal.integrated.defaultProfile.linux": "zsh",
+        "editor.minimap.enabled": false,
+        "editor.formatOnSave": true,
+        "editor.formatOnType": true,
+        "editor.codeActionsOnSave": {
+          "source.fixAll": true,
+          "source.organizeImports": true
+        },
+        "[typescript]": {
+          "editor.defaultFormatter": "esbenp.prettier-vscode"
+        },
+        "editor.rulers": [80],
+        "javascript.validate.enable": false,
+        "typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": false,
+        "typescript.format.semicolons": "insert",
+        "typescript.tsdk": "node_modules/typescript/lib",
+        "eslint.validate": ["typescript", "typescriptreact"]
+      },
+      // Add the IDs of extensions you want installed when the container is created.
+      "extensions": [
+        "dbaeumer.vscode-eslint",
+        "esbenp.prettier-vscode",
+        "github.vscode-pull-request-github",
+        "ms-vscode.cpptools-extension-pack",
+        "marus25.cortex-debug",
+        "xaver.clang-format"
+      ]
+    },
+    // Use 'forwardPorts' to make a list of ports inside the container available locally.
+    "forwardPorts": [3232, 3233],
+    // Use 'postCreateCommand' to run commands after the container is created.
+    "postCreateCommand": "scripts/setup.sh",
+    // Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
+    "remoteUser": "vscode"
+  }
 }
