--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,7 +19,7 @@
   },
   "features": {
     "ghcr.io/devcontainers/features/node:1": {
-      "version": "lts/fermium"
+      "version": "lts/gallium"
     },
     "ghcr.io/devcontainers-contrib/features/typescript:2": {},
 
